[package]
name = "pgfdb"
version = "0.0.2"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgfdb"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17", "foundationdb/fdb-7_3"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = ["foundationdb/fdb-7_3"]

[dependencies]
pgrx = "0.14.3"
pgrx-sql-entity-graph = "0.14.3"
foundationdb = "0.9.1"
bytes = "1.10.1"
futures = "0.3.31"
pollster = "0.3.0"
rand = "0.9.1"
serde = "1.0.219"
serde_cbor = "0.11.2"

[dev-dependencies]
pgrx-tests = "0.14.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
rpath = true
